--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/mayconcarlete/script-changer-config#readme",
   "devDependencies": {
+    "nodemon": "^2.0.7",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.4"
   }
