--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/mayconcarlete/script-changer-config#readme",
   "devDependencies": {
+    "@types/node": "^15.3.0",
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
     "ts-jest": "^26.5.6",
